<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">Koti</string>
    <!-- HOME-->
    <string name="header_home_name">Koti</string>
    <string name="home_introduction">Tervetuloa SOVELLUSNIMEEN!\n
        Sovelluksessa navigointi tapahtuu vasemmassa yläkulmassa sijaitsevan animoidun kuvakkeen avulla.\n
        Tämä sovellus hakee elokuvien tietoja Finnkinon XML-verkkosivulta ja tallentaa ne omaan tiedostoon.\n
        Näin ollen kykenet tarkastelemaan elokuvia, jotka eivät edes pyöri enää Finnkinon teattereissa!\n
        Sovelluksen eri näkymien toiminnallisuudet on kuvattu niiden yläreunassa.\n
        Tämän soveluksen kehittäjinä toimivat Joel Leppänen, Werneri Punavaara sekä Wihtori Punavaara.



    </string>
    <!-- MovieSearch-->
    <string name="header_movie_search_name">Elokuvahaku</string>
    <string name="movie_search_fragment_info">Tästä valikosta voit hakea eri elokuvien tietoja elokuvien nimillä.\n Voit tarkastella elokuvia tarkemmin näpäyttämällä niitä.\n Hauskaa selailua!</string>
    <string name="movie_search_show_all_button">Näytä kaikki</string>
    <string name="movie_search_bar_text">Hae elokuvaa nimellä</string>
    <!-- MoviePersonSearch-->
    <string name="header_movie_person_search_name">Henkilöhaku</string>
    <string name="movie_person_search_fragment_info">Tästä näkymästä voit hakea elokuvia näyttelijöiden tai ohjaajien nimien perusteella.\n Voit tarkastella elokuvia tarkemmin näpäyttämällä niitä.\n Hauskaa selailua!</string>
    <string name="movie_person_search_bar_text">Hae elokuvia henkilön avulla</string>
    <!-- MovieInfo -->
    <string name="movie_release_year">Julkaisuvuosi:</string>
    <string name="movie_genre">Genre:</string>
    <string name="movie_age_rating">Ikärajoitus:</string>
    <string name="add_to_favorites_button">Lisää suosikkeihin:</string>
    <string name="go_back_button">Takaisin</string>



    <!-- Favorites-->
    <string name="header_favorite_name">Suosikit</string>
    <string name="favorite_fragment_info">Tästä näkymästä löydät kaikki suosikkielokuvasi. Voit tarkastella elokuvia tarkemmin ja hallita suosikkielokuviasi näpäyttämällä niitä.</string>
    <string name="favorite_search_bar_text">Hae suosikeistasi</string>
    <!-- Settings-->
    <string name="header_settings_name">Asetukset</string>
    <string name="settings_fragment_info">Tästä näkymästä löydät sovelluksen asetukset.</string>


    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Sähköposti</string>
    <string name="prompt_password">Salasana</string>
    <string name="action_sign_in">Kirjaudu sisään tai rekisteröidy</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome">"Tervetuloa !"</string>
    <string name="invalid_username">Käyttäjänimi ei kelpaa</string>
    <string name="invalid_password">Salasanan tulee olla vähintään 5 merkkiä pitkä</string>
    <string name="login_failed">Kirjautuminen epäonnistui</string>
    <string name="kirjaudu_ulos">Kirjaudu ulos</string>
    <string name="poista_kayttaja">Poista käyttäjä</string>
</resources>