<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/header_home_name" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/header_movie_search_name" />
        <item
            android:id="@+id/personsearch"
            android:icon="@drawable/ic_baseline_person_search_24"
            android:title="@string/header_movie_person_search_name" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/header_favorite_name" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/header_settings_name" />

    </group>
</menu>